v 1.1.0 (26/11/2015)
- Added 'Sort' option for series and episodes (#23)
- Started looking for more elegant function and plexbmc.py came into look - so abomination of code is now :-) so many merges

v1.0.9 (25/11/2015)
- Adding Characters in JMMServerKodi to feed them to Nakamori
_ Characters support almost complete

v1.0.8 (23/11/2015)
- Proper handling Series that are splitte into Episode/Special directories (#16)
- clean up code that wasn't used

v1.07 (22/11/2015)
- after changes made to JMMServer now Nakamori is feeded with <Directory> and not both <Directory> and <Video>
- expanded better info about <Directory> currently same as <Video>
- cleaning code in <Directory> and <Video> - no one need wasted memory
- fix'd searching box canceling (#15)

v1.0.6 (21/11/2015)
- changed few static variables to proper one. Almost all information for Video file is done.

v1.0.5 (20/11/2015)
- added extended information for videos (not series), some are still static

v1.0.4 (19/11/2015)
- using new JMMServiceImplementationKodi

v1.0.3 (19/11/2015)
- fixed not playing videos (thanks bmfrosty)

v1.0.2 (18/11/2015)
- added setting to pick user id for more complex setup
- added Search with MaxLimit setting (#1)

v1.0.1 (18/11/2015)
- moved file around

v1.0.0 (17/11/2015)
- added addon.xml
- clean up the code
- added icon.png
- added settings to change ip address and port of JMM Server

v0.0.1 (13/10/2015)
- Initial version